--- a/main.html
+++ b/main.html
@@ -7,6 +7,87 @@
 </head>
 
 <body>
+	<form action="job_form" method="post"> 
+	<h1>Job Application Form</h1>
+
+		<div>	
+		<label for="name">Name</label>
+	<input type="text" id="name" name="name" required>
+		</div>
+	<br>
+
+
+		<div>	
+		<label for="email">Email</label>
+	<input type="email" id="email" name="email" required>
+		</div>
+	<br>
+	
+	
+	<div>	
+		<label>Gender</label>
+		
+	<input type="radio" id="gender" name="gender" value="male" required>
+		<label for="gender">Male</label>
+ 
+	<input type="radio" id="gender" name="gender" value="female" required>
+		<label for="gender">Female</label>
+		</div>
+	<br>
+
+
+		<div>	
+			<label for=laptop>Laptop Brands</label>
+		<select id="laptop" name="laptop">
+	<option value="">--Please choose an option--</option>
+                <option value="Apple">Apple</option>
+                <option value="Asus">Asus</option>
+                <option value="HP">HP</option>
+		</select>
+		</div>
+	<br>
+
+
+		
+		<div>	
+		<label for="age">Age</label>
+	<input type="number" id="age" name="age" required>
+		</div>
+	<br>
+
+
+<div>	
+		<label for="dob">Date of Birth</label>
+	<input type="date" id="dob" name="dob" required>
+		</div>
+	<br>
+		
+
+		
+
+		<div>	
+		<label for="password">Password</label>
+	<input type="password" id="password" name="password" required>
+		</div>
+	<br>
+
+
+
+		<div>	
+		<label for="portfolio">Portfolio URL</label>
+	<input type="url" id="portfolio" name="portfolio">
+		</div>
+	<br>
+
+
+<div>
+	<button type="submit">Submit</button>
+</div>
+	
+	
+	
+	
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
